--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-03-25  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Deprecate non-standard '\e' escape sequence.
+
 2019-02-04  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Handle fork() errors.
