--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2019-03-25  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Deprecate non-standard '\e' escape sequence.
+	* Promote some messages to LOG_CRIT.
 
 2019-02-04  Janik Rabe  <oidentd@janikrabe.com>
 
