--- a/doc/oidentd.conf.5.adoc
+++ b/doc/oidentd.conf.5.adoc
@@ -33,7 +33,7 @@ user.
 
 The system-wide configuration file *{sysconfdir}/oidentd.conf* specifies the
 types of responses individual users are permitted to send.  By default, users
-must respond with the name of their user account.
+must respond with their real username.
 
 The user configuration files *~/.oidentd.conf* allow users to send custom ident
 responses or to hide their identities, provided that they have been granted the
@@ -51,7 +51,7 @@ missing, in which case this default applies.  Changes to this file take effect
 only after *oidentd* is reloaded (which occurs when a SIGHUP signal is
 received) or restarted.
 
-The system-wide configuration file contains at most one directive of the
+The system-wide configuration file contains zero or one directive of the
 following form:
 
 [subs="quotes"]
@@ -87,7 +87,7 @@ must be readable by the user *oidentd* runs as.  The user configuration file is
 read automatically after every successful lookup, so any changes take effect
 immediately.
 
-The user configuration file contains at most one directive of the following
+The user configuration file contains zero or one directive of the following
 form:
 
 [subs="quotes"]
