--- a/README
+++ b/README
@@ -18,8 +18,8 @@ supported kernels.  The 'INSTALL' file contains instructions for installing
 oidentd.  The 'HACKING' file describes how to work with the source code.
 
 oidentd is maintained and developed by Janik Rabe <oidentd@janikrabe.com>, with
-contributions from many people listed in the 'AUTHORS' file.  It was originally
-written by Ryan McCabe <ryan@numb.org>.
+contributions from many people, who are listed in the 'AUTHORS' file.  oidentd
+was originally written by Ryan McCabe <ryan@numb.org>.
 
 The most recent version of oidentd is available from
 <https://files.janikrabe.com/pub/oidentd/releases/latest>.
