Implement XDG Base Directory specification
Requested-by: Unit193

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2019-03-28  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Remove unnecessary parentheses from VALID_PORT.
+	* Implement XDG Base Directory specification.
 
 2019-03-27  Janik Rabe  <oidentd@janikrabe.com>
 
