--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* Remove unnecessary parentheses from VALID_PORT.
 	* Implement XDG Base Directory specification.
+	* Indicate directories relative to $HOME in --version.
 
 2019-03-27  Janik Rabe  <oidentd@janikrabe.com>
 
