--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-03-28  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Fix incorrect username in failed spoof_all log message.
+
 2019-03-25  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Deprecate non-standard '\e' escape sequence.
