--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-04-03  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Improve extract_port_range error messages.
+
 2019-03-28  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Remove unnecessary parentheses from VALID_PORT.
