--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-04-18  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Log debug message when Netlink socket fails to open.
+
 2019-04-03  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Improve extract_port_range error messages.
