Deprecate support for ancient kernels
This commit deprecates support for EOL versions of FreeBSD, NetBSD and OpenBSD.
All compatible versions of Darwin and Solaris have reached EOL, so support for
all versions of these kernels has been deprecated.

On affected kernels, a warning message will be shown during compilation and at
runtime.  oidentd will continue to work on these kernels until at least August
2021.

Darwin
	No support for latest kernel; patches accepted.

FreeBSD 1-3
	EOL; last release was in Jun 2000.

FreeBSD 4
	EOL; last release was in Jan 2005.

NetBSD 1-4
	EOL; last release was in Dec 2007.

OpenBSD 2.0-2.3
	EOL; last release was in May 1998.

OpenBSD 2.4-2.8
	EOL; last release was in Dec 2000.

OpenBSD 2.9
	EOL; last release was in Jun 2001.

Solaris 2.4
	EOL; last release was in Nov 1994.

Solaris 2.5
	EOL; last release was in May 1996.

Solaris 2.6-2.7
	EOL; last release was in Nov 1998.

Solaris 2.8
	EOL; last release was in Feb 2000.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2019-04-19  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Deprecate support for Darwin.
+	* Deprecate support for FreeBSD 1-3.
+	* Deprecate support for FreeBSD 4.
+	* Deprecate support for NetBSD 1-4.
+	* Deprecate support for OpenBSD 2.0-2.3.
+	* Deprecate support for OpenBSD 2.4-2.8.
+	* Deprecate support for OpenBSD 2.9.
+	* Deprecate support for Solaris 2.4.
+	* Deprecate support for Solaris 2.5.
+	* Deprecate support for Solaris 2.6-2.7.
+	* Deprecate support for Solaris 2.8.
+
 2019-04-18  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Log debug message when Netlink socket fails to open.
