--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,17 @@ Unreleased changes
 	* Rewrote all manual pages, now licensed under GFDL v1.3+.
 	* Rewrote INSTALL and README files.
 	* Changed project description.
+	* Deprecated support for Darwin.
+	* Deprecated support for FreeBSD 1-3.
+	* Deprecated support for FreeBSD 4.
+	* Deprecated support for NetBSD 1-4.
+	* Deprecated support for OpenBSD 2.0-2.3.
+	* Deprecated support for OpenBSD 2.4-2.8.
+	* Deprecated support for OpenBSD 2.9.
+	* Deprecated support for Solaris 2.4.
+	* Deprecated support for Solaris 2.5.
+	* Deprecated support for Solaris 2.6-2.7.
+	* Deprecated support for Solaris 2.8.
 
 Changes in version 2.3.2
 
