--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-04-20  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Reduce option bitfield values.
+
 2019-04-19  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Deprecate support for Darwin.
