Change some error messages

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* Reduce option bitfield values.
 	* Use int values in capng_change_id call.
 	* Use standard syslog priority names.
+	* Change some error messages.
 
 2019-04-19  Janik Rabe  <oidentd@janikrabe.com>
 
