Improve PRNG interface
* Prefer arc4random_uniform(3), lrand48(3), random(3), rand(3), in this
  order, instead of only using rand(3).

* Reroll if necessary (not with arc4random_uniform(3)) to eliminate bias
  and potentially dangerous type casts and floating point arithmetic.

* Seed the PRNG (not with arc4random_uniform(3)) from clock_gettime(2),
  because it is more precise and gettimeofday(2) is obsolete as of
  POSIX.1-2008.  A time-based seed is sufficient as oidentd does not
  require cryptographically secure random numbers.

* Seed the PRNG (not with arc4random_uniform(3)) only after fork(2), as
  the parent process does not generate random numbers, and only after a
  successful passwd lookup.

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Unreleased changes
 		* ~/.config/oidentd.conf takes precedence over ~/.oidentd.conf
 	* Rewrote all manual pages, now licensed under GFDL v1.3+.
 	* Rewrote INSTALL and README files.
+	* Improved PRNG interface.
 	* Changed project description.
 	* Deprecated support for Darwin.
 	* Deprecated support for FreeBSD 1-3.
