--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-04-22  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Improve PRNG interface.
+
 2019-04-20  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Reduce option bitfield values.
