Create macro for random_numeric upper limit

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* Improve PRNG interface.
 	* Remove superfluous newlines from o_log() calls.
+	* Create macro for random_numeric upper limit.
 
 2019-04-20  Janik Rabe  <oidentd@janikrabe.com>
 
