Make reply statements override previous replies
When the system-wide configuration file contains multiple 'force reply'
statements within the same scope, cause each statement to override the
preceding statement instead of adding additional replies.  This avoids
code duplication and simplifies the parser.

Because the previous behavior was undocumented, this is not considered a
breaking change.

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 	* Adjust user_db.h macro values.
 	* Prevent overflow when too many replies are specified in the
 	  system-wide configuration file.
+	* Make reply statements override previous replies.
 
 2019-04-20  Janik Rabe  <oidentd@janikrabe.com>
 
